moon & sun effect

--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
     <title>Birthday Wishes</title>
   </head>
   <body>
+        <div class="circle-top">
+            <div class="cirle-pulse" style="--i:0"></div>
+            <div class="cirle-pulse" style="--i:1"></div>
+            <div class="cirle-pulse" style="--i:2"></div>
+            <div class="cirle-pulse" style="--i:3"></div>
+        </div>
+        <div class="circle-bottom">
+            <div class="cirle-pulse" style="--i:0"></div>
+            <div class="cirle-pulse" style="--i:1"></div>
+            <div class="cirle-pulse" style="--i:2"></div>
+            <div class="cirle-pulse" style="--i:3"></div>
+        </div>
         <div class="container">
             <div data-tilt data-tilt-glare data-tilt-max-glare="0.8" class="calendar-card">
                 <div class="card-content">
