--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <!-- Atropos Parallax CSS -->
     <link rel="stylesheet" href="css/atropos.css" />
 
+    <!-- Canlendar css -->
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="css/calendar.css">
+
     <!-- App css -->
     <link rel="stylesheet" href="css/style.css" />
 
@@ -70,73 +74,66 @@
               </div>
             </div>
             <div class="card-content">
-              <div class="row">
-                <div class="month-year" data-atropos-offset="15">
-                  March - 2023
+              <div class="calendar dark">
+                <!-- Calendar Header -->
+                <div class="calendar-header">
+                  <span class="month-picker" data-atropos-offset="15" id="month-picker">
+                    February
+                  </span>
+                  <div class="year-picker">
+                    <span class="year-change mt-3" data-atropos-offset="15" id="prev-year">
+                      <pre> < </pre>
+                    </span>
+                    <span id="year" data-atropos-offset="15">2023</span>
+                    <span class="year-change mt-3" data-atropos-offset="15" id="next-year">
+                      <pre> > </pre>
+                    </span>
+                  </div>
                 </div>
-              </div>
-              <div class="row">
-                <div class="col day" data-atropos-offset="15">Mon</div>
-                <div class="col day" data-atropos-offset="15">Tue</div>
-                <div class="col day" data-atropos-offset="15">Wed</div>
-                <div class="col day" data-atropos-offset="15">Thu</div>
-                <div class="col day" data-atropos-offset="15">Fri</div>
-                <div class="col day" data-atropos-offset="15">Sat</div>
-                <div class="col day" data-atropos-offset="15">Sun</div>
-              </div>
-              <div class="row">
-                <div class="col date">01</div>
-                <div class="col date">02</div>
-                <div class="col date">03</div>
-                <div class="col date">04</div>
-                <div class="col date">05</div>
-                <div class="col date">06</div>
-                <div class="col date">07</div>
-              </div>
-              <div class="row">
-                <div class="col date">01</div>
-                <div class="col date">02</div>
-                <div class="col date">03</div>
-                <div class="col date">04</div>
-                <div class="col date">05</div>
-                <div class="col date">06</div>
-                <div class="col date">07</div>
-              </div>
-              <div class="row">
-                <div class="col date">01</div>
-                <div class="col date">02</div>
-                <div class="col date">03</div>
-                <div class="col date active">04</div>
-                <div class="col date">05</div>
-                <div class="col date">06</div>
-                <div class="col date">07</div>
-              </div>
-              <div class="row">
-                <div class="col date">01</div>
-                <div class="col date">02</div>
-                <div class="col date">03</div>
-                <div class="col date">04</div>
-                <div class="col date">05</div>
-                <div class="col date">06</div>
-                <div class="col date">07</div>
-              </div>
-              <div class="row">
-                <div class="col date">01</div>
-                <div class="col date">02</div>
-                <div class="col date">03</div>
-                <div class="col date">04</div>
-                <div class="col date">05</div>
-                <div class="col date">06</div>
-                <div class="col date">07</div>
-              </div>
-              <div class="row">
-                <div class="col date">01</div>
-                <div class="col date">02</div>
-                <div class="col date">03</div>
-                <div class="col date">04</div>
-                <div class="col date">05</div>
-                <div class="col date">06</div>
-                <div class="col date">07</div>
+                <!-- Calendar Body -->
+                <div class="calendar-body">
+                  <div class="calendar-week-day">
+                    <div data-atropos-offset="35">Sun</div>
+                    <div data-atropos-offset="35">Mon</div>
+                    <div data-atropos-offset="35">Tue</div>
+                    <div data-atropos-offset="35">Wed</div>
+                    <div data-atropos-offset="35">Thu</div>
+                    <div data-atropos-offset="35">Fri</div>
+                    <div data-atropos-offset="35">Sat</div>
+                  </div>
+                  <div class="calendar-day">
+                    <div>
+                      1
+                      <span></span>
+                      <span></span>
+                      <span></span>
+                      <span></span>
+                    </div>
+                    <div>2</div>
+                    <div>3</div>
+                    <div>4</div>
+                    <div>5</div>
+                    <div>6</div>
+                    <div>7</div>
+                    <div>1</div>
+                    <div>2</div>
+                    <div>3</div>
+                    <div>4</div>
+                    <div>5</div>
+                    <div>6</div>
+                    <div>7</div>
+                  </div>
+                </div>
+                <!-- Calendar Footer -->
+                <div class="calendar-footer">
+                    <div class="toggle">
+                        <span>Dark Mode</span>
+                        <div class="dark-mode-switch">
+                            <div class="dark-mode-switch-ident"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="month-list"></div>
               </div>
             </div>
           </div>
@@ -149,6 +146,8 @@
 
     <!-- Astropos JS -->
     <script type="text/javascript" src="js/atropos.js"></script>
+
+    <script type="text/javascript" src="js/calendar.js"></script>
 
     <!-- App JS file -->
     <script type="text/javascript" src="js/main.js"></script>
