--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
       <div class="cirle-pulse" style="--i: 3"></div>
     </div>
 
+    <div class="circle-middle">
+      <div class="cirle-pulse" style="--i: 0"></div>
+      <div class="cirle-pulse" style="--i: 1"></div>
+      <div class="cirle-pulse" style="--i: 2"></div>
+      <div class="cirle-pulse" style="--i: 3"></div>
+    </div>
+
     <div class="atropos my-atropos container">
       <!-- scale container (required) -->
       <div class="atropos-scale">
@@ -71,6 +78,12 @@
                   Second
                   <div id="sec"></div>
                 </h1>
+              </div>
+              <div class="discover-birthday">
+                <h1 data-text="To day is Your Birthday">To day is Your Birthday</h1>
+                <button class="magic-card" onclick="clickToDiscover()">
+                  Tap me <br> To discover your day
+                </button>
               </div>
             </div>
             <div class="card-content">
