gift-card appear effect

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div id="wrapper-particles">
     </div>
     
-    <div class="atropos my-atropos container" style="display: none;">
+    <div class="atropos my-atropos container">
         <!-- scale container (required) -->
         <div class="atropos-scale">
           <!-- rotate container (required) -->
@@ -88,9 +88,11 @@
                 </div>
                 <div class="discover-birthday">
                   <h1 data-text="To day is Your Birthday">To day is Your Birthday</h1>
-                  <button class="magic-card" onclick="clickToDiscover()">
-                    Tap me <br> To discover your day
-                  </button>
+                  <div class="magic-card-wrapper">
+                    <button class="magic-card" onclick="clickToDiscover()">
+                      Tap me <br> To discover your day
+                    </button>
+                  </div>
                 </div>
               </div>
               <div class="card-content">
