--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
       <div class="cirle-pulse" style="--i: 2"></div>
       <div class="cirle-pulse" style="--i: 3"></div>
     </div>
-    <!-- <div class="circle-middle">
+    <div class="circle-middle">
       <div class="cirle-pulse" style="--i: 0"></div>
       <div class="cirle-pulse" style="--i: 1"></div>
       <div class="cirle-pulse" style="--i: 2"></div>
       <div class="cirle-pulse" style="--i: 3"></div>
-    </div> -->
+    </div>
 
     <div id="wrapper-particles"></div>
 
