--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     
     <div class="card-slider">
-      <h2 class="happy-birthday-text">
+      <!-- <h2 class="happy-birthday-text">
         <span style="--i: 1">H</span>
         <span style="--i: 2">a</span>
         <span style="--i: 3">p</span>
@@ -73,7 +73,7 @@
         <span style="--i: 11">d</span>
         <span style="--i: 12">a</span>
         <span style="--i: 13">y</span>
-      </h2>
+      </h2> -->
       <div class="swiper-wrapper">
 
         <!-- Happy -->
