--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         <div class="swiper-slide">
           <div class="gift-card fire">
             <div class="cover">
-              <h2 onclick="wishesAnimation(this)">First <br> wishes</h2>
+              <h2 onclick="wishesAnimation(this)">First <br> wish</h2>
               <h1>Happy</h1>
             </div>
             <div class="wishes">
@@ -214,7 +214,7 @@
         <div class="swiper-slide">
           <div class="gift-card water">
             <div class="cover">
-              <h2 onclick="wishesAnimation(this)">Second <br> wishes</h2>
+              <h2 onclick="wishesAnimation(this)">Second <br> wish</h2>
               <h1>Luck</h1>
             </div>
             <div class="wishes">
@@ -227,7 +227,7 @@
         <div class="swiper-slide">
           <div class="gift-card wood">
             <div class="cover">
-              <h2 onclick="wishesAnimation(this)">Third <br> wishes</h2>
+              <h2 onclick="wishesAnimation(this)">Third <br> wish</h2>
               <h1>Success</h1>
             </div>
             <div class="wishes">
@@ -240,7 +240,7 @@
         <div class="swiper-slide">
           <div class="gift-card earth">
             <div class="cover">
-              <h2 onclick="wishesAnimation(this)">Fourth <br> wishes</h2>
+              <h2 onclick="wishesAnimation(this)">Fourth <br> wish</h2>
               <h1>Health</h1>
             </div>
             <div class="wishes">
@@ -253,11 +253,19 @@
         <div class="swiper-slide">
           <div class="gift-card metal">
             <div class="cover">
-              <h2 onclick="wishesAnimation(this)" style="font-size: 14px;">I wishes you will keep both healthy and successful. And you will become a  </h2>
-              <h1>Last Wishes...</h1>
+              <h2 onclick="lastWishes(this)" style="font-size: 14px;">
+                I wishes you will keep both <span style="color:#cc8e35">healthy</span> and <span  style="color:#00b894">successful</span>, always get lots of <span  style="color:#3c67e3">luck</span>. And you will become the <span  style="color:#d63031">happiest</span> person in the world 
+                And there is another wish, the last wish...<br>
+                Tap here 
+              </h2>
+              <h2 class="second-cover">
+                The last wish is your wishes to yourself on your next year's birthday, to you in the future,... <br>
+                It can be goals, promises, wishes for yourself next year and you can only revisit this day next year <br>
+                >> now tap if you ready to make this last wish <<
+              </h2>
             </div>
-            <div class="wishes">
-              
+            <div class="last-wishes">
+              adasdasd
             </div>
           </div>
         </div>
