add credit and mobile release

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
     <!-- App css -->
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/laptop.css" />
 
     <title>Birthday Wishes</title>
   </head>
@@ -174,6 +175,8 @@
         </div>
       </div>
     </div>
+
+    <h2 class="author">A Gift designed by Yugi Nova <br> for My Sister's Birthday</h2>
 
     <div id="wrapper-particles"></div>
 
