--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
       <div class="cirle-pulse" style="--i: 2"></div>
       <div class="cirle-pulse" style="--i: 3"></div>
     </div>
+    <div class="circle-green"></div>
 
     <div class="atropos my-atropos container">
       <div class="atropos-scale">
         <div class="atropos-rotate">
           <div class="atropos-inner calendar-card">
-
             <div class="birthday-countdown">
               <div class="animal-of-age" data-atropos-offset="-15">
                 <img src="images/tiger-face.png" alt="" />
@@ -176,83 +176,123 @@
       </div>
     </div>
 
-    <h2 class="author">A Gift designed by Yugi Nova <br> for My Sister's Birthday</h2>
-
     <div id="wrapper-particles"></div>
-
 
     <div class="card-slider">
       <div class="swiper-wrapper">
-  
         <!-- Happy -->
         <div class="swiper-slide">
           <div class="gift-card fire">
             <div class="cover">
-              <h2 onclick="wishesAnimation(this)"><span style="font-size: 15px;">>> Tap me <<</span><br>First <br> wishes</h2>
+              <h2 onclick="wishesAnimation(this)">
+                <span style="font-size: 15px">>> Tap me <<</span><br />First
+                <br />
+                wishes
+              </h2>
               <h1>Happy</h1>
             </div>
             <div class="wishes">
-              <p>There is no value in life except what you choose to place upon it and no happiness in any place except what you bring to it yourself. Have a wonderful time and a very happy birthday!</p>
+              <p>
+                There is no value in life except what you choose to place upon
+                it and no happiness in any place except what you bring to it
+                yourself. Have a wonderful time and a very happy birthday!
+              </p>
             </div>
           </div>
         </div>
-  
+
         <!-- Luck -->
         <div class="swiper-slide">
           <div class="gift-card water">
             <div class="cover">
-              <h2 onclick="wishesAnimation(this)"><span style="font-size: 15px;">>> Tap me <<</span><br>Second <br> wishes</h2>
+              <h2 onclick="wishesAnimation(this)">
+                <span style="font-size: 15px">>> Tap me <<</span><br />Second
+                <br />
+                wishes
+              </h2>
               <h1>Luck</h1>
             </div>
             <div class="wishes">
-              <p>An old saying said that: “Every day is a gift. It can be really amazing, but it can be disappointing also. However, I want to wish good luck in everything that happens in your life. May yours bring you only pleasant and helpful gifts.</p>
+              <p>
+                An old saying said that: “Every day is a gift. It can be really
+                amazing, but it can be disappointing also. However, I want to
+                wish good luck in everything that happens in your life. May
+                yours bring you only pleasant and helpful gifts.
+              </p>
             </div>
           </div>
         </div>
-  
+
         <!-- Success -->
         <div class="swiper-slide">
           <div class="gift-card wood">
             <div class="cover">
-              <h2 onclick="wishesAnimation(this)"><span style="font-size: 15px;">>> Tap me <<</span><br>Third <br> wishes</h2>
+              <h2 onclick="wishesAnimation(this)">
+                <span style="font-size: 15px">>> Tap me <<</span><br />Third
+                <br />
+                wishes
+              </h2>
               <h1>Success</h1>
             </div>
             <div class="wishes">
-              <p>All successful people men and women are big dreamers. They imagine what their future could be, ideal in every respect, and then they work every day toward their distant vision, that goal or purpose. For great success you must have big dreams.</p>
+              <p>
+                All successful people men and women are big dreamers. They
+                imagine what their future could be, ideal in every respect, and
+                then they work every day toward their distant vision, that goal
+                or purpose. For great success you must have big dreams.
+              </p>
             </div>
           </div>
         </div>
-  
+
         <!-- Health -->
         <div class="swiper-slide">
           <div class="gift-card earth">
             <div class="cover">
-              <h2 onclick="wishesAnimation(this)"><span style="font-size: 15px;">>> Tap me <<</span><br>Fourth <br> wishes</h2>
+              <h2 onclick="wishesAnimation(this)">
+                <span style="font-size: 15px">>> Tap me <<</span><br />Fourth
+                <br />
+                wishes
+              </h2>
               <h1>Health</h1>
             </div>
             <div class="wishes">
-              <p>There’s nothing more important than our good health – that’s our principal capital asset. I wishes you have lots of health and success in your life.</p>
+              <p>
+                There’s nothing more important than our good health – that’s our
+                principal capital asset. I wishes you have lots of health and
+                success in your life.
+              </p>
             </div>
           </div>
         </div>
-  
+
         <!-- Write for yourselft next year -->
         <div class="swiper-slide">
           <div class="gift-card metal">
             <div class="cover">
-              <h2 onclick="lastWishes(this)" style="font-size: 14px;">
-                I wishes you will keep both <span style="color:#cc8e35">healthy</span> and <span  style="color:#00b894">successful</span>, always get lots of <span  style="color:#3c67e3">luck</span>. And you will become the <span  style="color:#d63031">happiest</span> person in the world 
-                And there is another wish, the last wishes...<br>
+              <h2 onclick="lastWishes(this)" style="font-size: 14px">
+                I wishes you will keep both
+                <span style="color: #cc8e35">healthy</span> and
+                <span style="color: #00b894">successful</span>, always get lots
+                of <span style="color: #3c67e3">luck</span>. And you will become
+                the <span style="color: #d63031">happiest</span> person in the
+                world And there is another wish, the last wishes...<br />
                 >> Tap here <<
               </h2>
               <h2 class="second-cover" onclick="secondCover(this)">
-                The last wishes is your wishes to yourself on your next year's birthday, to you in the future,... <br>
-                It can be goals, promises, wishes for yourself next year and you can only revisit this day next year <br>
+                The last wishes is your wishes to yourself on your next year's
+                birthday, to you in the future,... <br />
+                It can be goals, promises, wishes for yourself next year and you
+                can only revisit this day next year <br />
                 >> now tap if you ready to make this last wish <<
               </h2>
             </div>
             <div class="last-wishes">
-              <textarea id="your-last-wishes" cols="35" placeholder="Type your wishes here, only English...."></textarea>
+              <textarea
+                id="your-last-wishes"
+                cols="35"
+                placeholder="Type your wishes here, only English...."
+              ></textarea>
               <!-- <input type="text" id="your-last-wishes"> -->
               <button class="btn-send-wishes">
                 <span class="default">Send</span>
@@ -262,15 +302,30 @@
               </button>
             </div>
             <h2 class="last-cover">
-              Your wishes have been sent to the future <br>
+              Your wishes have been sent to the future <br />
               You can only watch it again on your next year's birthday
             </h2>
           </div>
         </div>
       </div>
-      </div>
+    </div>
 
+    <div class="happy-birthday">
+      <ul class="c-rainbow">
+        <li class="c-rainbow__layer c-rainbow__layer--white">HappyBirthday</li>
+        <li class="c-rainbow__layer c-rainbow__layer--orange">HappyBirthday</li>
+        <li class="c-rainbow__layer c-rainbow__layer--red">HappyBirthday</li>
+        <li class="c-rainbow__layer c-rainbow__layer--violet">HappyBirthday</li>
+        <li class="c-rainbow__layer c-rainbow__layer--blue">HappyBirthday</li>
+        <li class="c-rainbow__layer c-rainbow__layer--green">HappyBirthday</li>
+        <li class="c-rainbow__layer c-rainbow__layer--yellow">HappyBirthday</li>
+      </ul>
+    </div>
 
+    <h2 class="author">
+      A Gift designed by Yugi Nova <br />
+      for My Sister's Birthday
+    </h2>
     <!-- Particles JS -->
     <script type="text/javascript" src="js/particles.min.js"></script>
 
